# sqlite-vec-with-embeddinggemma

./: .gitignore  README.md  main.py  pyproject.toml
