[project]
name = "sqlite-vec-sqlmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.62",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.0",
    "sqlite-vec>=0.1.6",
    "sqlmodel>=0.0.24",
]
